err/expectocastellum.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ExpectoCastellum-0.5.egg-info'...
Listing './lib/python3.5/site-packages/expectocastellum'...
Compiling './lib/python3.5/site-packages/expectocastellum/commands.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/commands.py", line 26
    print "You are in " + player.location
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/errors.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/errors.py", line 2
    print "I support objects of type room, thing, or npc, not %s. Sorry!" % type
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/people.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/people.py", line 38
    print self.out_house[1]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/quiz.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/quiz.py", line 37
    print "::insert sorting song here:: Let's get you sorted!"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/rooms.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/rooms.py", line 29
    print "That is already in %s's inventory." % destination.name
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/spells.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/spells.py", line 15
    print "A silvery " + self.you.patronus + " jumps from the end of your wand and scurries around before disappearing!"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/thesaurus.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/thesaurus.py", line 50
    print "I don't do very well with long instructions. Try typing 'help' to learn how to talk to me."
                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/expectocastellum/things.py'...
***   File "./lib/python3.5/site-packages/expectocastellum/things.py", line 27
    print self.detail
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
